<resources>
    <string name="app_name">CovidPass</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Covid Pass</string>
    <string name="nav_header_subtitle">Tvoj kľúč do COVID-free života</string>
    <string name="nav_header_desc">Navigation header</string>

    <string-array name="vakciny">
        <item>Pfizer</item>
        <item>Moderna</item>
        <item>AstraZeneca</item>
        <item>Sputnik</item>
        <item>Jonson &amp; Jonson</item>
    </string-array>
    <string-array name="test">
        <item>PCR</item>
        <item>Antigenový</item>
        <item>Kloktací</item>
    </string-array>


    <string name="menu_os_udaje">Os.údaje</string>
    <string name="menu_testy">Testy</string>
    <string name="menu_ockovanie">Očkovanie</string>
    <string name="menu_nakazeny">Nakazený</string>
    <string name="menu_kontrola">Kontrola</string>
    <string name="menu_karantena">Karanténa</string>
    <string name="test_datum">Dátum testu:</string>
    <string name="test_typ">Typ testu:</string>
    <string name="test_fotka">Vyber fotku:</string>
    <string name="rodCislo">Rod. číslo:</string>
    <string name="meno">Meno:</string>
    <string name="priezvisko">Priezvisko:</string>
    <string name="mesto">Mesto:</string>
    <string name="adresa">Adresa:</string>
    <string name="stav">Stav:</string>
    <string name="poslednyTest">Posledný test:</string>
    <string name="vysledok">Výsledok:</string>
    <string name="ockovany">Zaočkovaný:</string>
    <string name="typVakciny">Typ vakcíny:</string>
    <string name="datum1">Dátum 1. dávka:</string>
    <string name="datum2">Dátum 2. dávka:</string>
    <string name="dveDavky">Dve dávky:</string>
    <string name="kodOCcentra">Kód očk. centra:</string>
    <string name="datumZac">Dátum začiatku:</string>
    <string name="dobaTrvania">Doba trvania:</string>
    <string name="info_test">Výpis testov</string>
    <string name="som_v_karantene">Som v karanténe ?</string>
    <string name="rod_cislo_napoveda">xxxxxx/xxxx</string>
    <string name="datum_napoveda">DD/MM/YYYY</string>
    <string name="doba_trvania_napoveda">14</string>
    <string name="zacat_karantenu_btn">Začať karanténu</string>
    <string name="kontrola_btn">Zobraziť</string>
    <string name="pocet_davok_napoveda">Áno</string>
    <string name="kodOC_napoveda">xxxxxx</string>
    <string name="zapOckovanie_btn">Zapísať očkovanie</string>
    <string name="vypOC_btn">Vypísať očkovanie</string>
    <string name="vypUzivatelov_btn">Vypísať užívaťeľov</string>
    <string name="priezvisko_napoveda">Mrkvička</string>
    <string name="meno_napoveda">Jožko</string>
    <string name="setUser_btn">Uložiť užívateľa</string>
    <string name="mesto_napoveda">Horná dolná</string>
    <string name="adresa_napoveda">Južná 123</string>
    <string name="vysledokTestu_napoveda">Pozitive</string>
    <string name="zapTest_btn">Zapísať test</string>
    <string name="vypTesty_napoveda">Vypísať testy</string>


</resources>