<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.os_udaje.OsUdajeFragment">

        <Button
            android:id="@+id/VypisOsob"
            android:layout_width="200dp"
            android:layout_height="56dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/zaoblene_rohy"
            android:onClick="onClickBtnVypisOsoby"
            android:text="Vypíš užívaťeľov"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sentInfo" />

        <EditText
            android:id="@+id/adresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="Južná 123"
            android:inputType="textPersonName|text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mestoVstup" />

        <TextView
            android:id="@+id/adresaVstup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="35dp"
            android:text="@string/adresa"
            android:textSize="4mm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mestoVstup" />

        <EditText
            android:id="@+id/mesto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="Horná dolná"
            android:inputType="textPersonName|text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rodCisloVstup" />

        <TextView
            android:id="@+id/mestoVstup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="35dp"
            android:text="@string/mesto"
            android:textSize="4mm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rodCisloVstup" />

        <EditText
            android:id="@+id/rodCislo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="xxxxxx/xxxx"
            android:inputType="date"
            android:maxLength="11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priezviskoVstup" />

        <TextView
            android:id="@+id/rodCisloVstup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="35dp"
            android:text="@string/rodCislo"
            android:textSize="4mm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priezviskoVstup" />

        <EditText
            android:id="@+id/priezvisko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="Mrkvička"
            android:inputType="textPersonName|text"
            android:maxLength="20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menoVstup" />

        <TextView
            android:id="@+id/priezviskoVstup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="35dp"
            android:text="@string/priezvisko"
            android:textSize="4mm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menoVstup" />

        <TextView
            android:id="@+id/menoVstup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/meno"
            android:textSize="4mm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/meno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="Jožko"
            android:inputType="textPersonName|text"
            android:maxLength="20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/sentInfo"
            android:layout_width="200dp"
            android:layout_height="56dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/zaoblene_rohy"
            android:onClick="onClickBtnSentInfo"
            android:text="Uložiť"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adresa" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>