<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.karantena.KarantenaFragment">

        <Button
            android:id="@+id/somVKarantene"
            android:layout_width="200dp"
            android:layout_height="56dp"
            android:layout_marginTop="50dp"
            android:onClick="onClickBtnKontrolaKaranteny"
            android:text="Som v karantene ?"
            android:background="@drawable/zaoblene_rohy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rcKarantenaKontrola" />

        <EditText
            android:id="@+id/rcKarantenaKontrola"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="xxxxxx/xxxx"
            android:maxLength="11"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zacatKarantenu" />

        <TextView
            android:id="@+id/rcKarantenaKontrolaVstup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="35dp"
            android:text="@string/rodCislo"
            android:textSize="4mm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zacatKarantenu" />

        <TextView
            android:id="@+id/rcKarantenaVstup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="45dp"
            android:text="@string/rodCislo"
            android:textSize="4mm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dobaTrvaniaVstup" />

        <TextView
            android:id="@+id/dobaTrvaniaVstup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="45dp"
            android:text="@string/dobaTrvania"
            android:textSize="4mm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datumZaciatkuVstup" />

        <TextView
            android:id="@+id/datumZaciatkuVstup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="45dp"
            android:text="@string/datumZac"
            android:textSize="4mm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/datumZaciatku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="DD/MM/YYYY"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/dobaTrvania"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="14"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datumZaciatkuVstup" />

        <EditText
            android:id="@+id/rcKarantena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="xxxxxx/xxxx"
            android:inputType="date"
            android:maxLength="11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dobaTrvaniaVstup" />

        <Button
            android:id="@+id/zacatKarantenu"
            android:layout_width="200dp"
            android:layout_height="56dp"
            android:layout_marginTop="50dp"
            android:onClick="onClickBtnZacKarantenu"
            android:text="Zacat karantenu"
            android:background="@drawable/zaoblene_rohy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rcKarantena" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>